--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# THE FOUR HORSEMEN
+node_modules
+.node_modules
+.env
+.DS_Store
+
 # Logs
 logs
 *.log
@@ -103,5 +109,3 @@ dist
 # TernJS port file
 .tern-port
 
-# Node modules
-.node_modules
